[Apple Pay] REGRESSION(r291588): `appearance: -apple-pay-button` doesn't work with `border-width: 0` https://bugs.webkit.org/show_bug.cgi?id=240087 <rdar://problem/92559095>

Reviewed by Kate Cheney.

Source/WebCore:

As of r291588, all `appearance` values now correspond to a specific element (or form control)
with the exception of `-apple-pay-button`, which can be applied to any element. Add logic to
specifically allow for this behavior.

Test: fast/css/appearance-apple-pay-button-border-width.html

* rendering/RenderTheme.cpp:
(WebCore::isAppearanceAllowedForAllElements): Added.
(WebCore::RenderTheme::adjustStyle):

LayoutTests:

* fast/css/appearance-apple-pay-button-border-width.html: Added.
* fast/css/appearance-apple-pay-button-border-width-expected-mismatch.html: Added.

* TestExpectations:
* platform/ios/TestExpectations:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/250293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293820 268f45cc-cd09-0410-ab3c-d52691b4dbfc